Should grave quotations be selecting by double-clicking as part of a word? Bug? #112630

Closed
opened 2023-09-20 16:52:38 +02:00 by ugorek · 2 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.23

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-10 22:17, hash: fca8df9415b1
Worked: never

Short description of error
If the word is highlighted with grave accent symbols, double click selects them along with the word.
2023-09-20_21.51.40.gif

Exact steps for others to reproduce the error

  1. Enter a word with quotes in a text field, eg. "af蘋фц" 'af蘋фц' `af蘋фц`
  2. Do double click.
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.23 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-10 22:17, hash: `fca8df9415b1` Worked: never **Short description of error** If the word is highlighted with grave accent symbols, double click selects them along with the word. ![2023-09-20_21.51.40.gif](/attachments/cf88031d-3da0-40d3-9b19-a671bb75ac93) **Exact steps for others to reproduce the error** 1. Enter a word with quotes in a text field, eg. ``` "af蘋фц" 'af蘋фц' `af蘋фц` ``` 2. Do double click.
ugorek added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-20 16:52:38 +02:00
ugorek changed title from Should `quotations`` be selecting by double-clicking as part of a word? Bug? to Should grave quotations be selecting by double-clicking as part of a word? Bug? 2023-09-20 16:53:01 +02:00
Iliya Katushenock added the
Interest
User Interface
label 2023-09-20 16:55:59 +02:00
Member

Can confirm. I'd prefer it to not select the ` mark.

Can confirm. I'd prefer it to not select the ``` ` ``` mark.
YimingWu added
Module
User Interface
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-09-21 04:27:22 +02:00
Pratik Borhade self-assigned this 2023-09-21 08:18:21 +02:00
Member

Fix: #112652

Fix: https://projects.blender.org/blender/blender/pulls/112652
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-03 01:57:14 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112630
No description provided.