Fix #112630: Skip grave quotation when selecting

Like single and double quote, skip grave chars when double selecting